--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -8,6 +8,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/APIMannager"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/TextDataFilter"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/JSON"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/Abbreviations"/>
         <property name="java-output-path" value="/MiniSoft1.1/build/classes"/>
         <property name="context-root" value="MiniSoft1.1"/>
     </wb-module>
